ags (3.4.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_filter_util.c to use fmod() instead modulo to compute phase

ags (3.4.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed arithmetic exception and improved base note of ags_filter_util.c

ags (3.4.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved pitch to use an octave as immediate frequency in ags_filter_util.c

ags (3.4.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed string length of mute_message in ags_osc_renew_controller_test.c
	* fixed sscanf call with wrong signed integer in ags_sfz_synth_util.c
	* minor improvements

ags (3.4.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_filter_util.c to use projection during 2nd pitch rewrite

ags (3.4.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed prototype of ags_audio_buffer_util_copy_float_to_complex()
	* improved ags_audio_buffer_util.c dealing with AgsComplex

ags (3.4.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing include in ags_xml_authentication.c and minor improvements

ags (3.4.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential division by zero in ags_filter_util.c

ags (3.4.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_audio_signal_clear()
	* fixed missing clear during synth generator compute

ags (3.4.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsSF2Generator
	* implemented AgsSFZGenerator
	* implemented AgsAudioContainerManager and AgsAudioFileManager
	* implemented pingpong copy in ags_audio_buffer_util.c
	* implemented ags_sf2_synth_util.c
	* implemented ags_sfz_synth_util.c
	* extended AgsFFPlayer
	* extended AgsPitchSampler
	* improved ags_filter_util.c
	* improved AgsComplex support
	* added unit-tests

ags (3.3.16)
