@@ -42,10 +42,6 @@ void ags_audio_file_link_get_property(GObject *gobject,
 				      GParamSpec *param_spec);
 void ags_audio_file_link_finalize(GObject *gobject);
 
-void
-ags_audio_file_link_read_launch(AgsFileLaunch *file_launch,
-				AgsAudioFileLink *audio_file_link);
-
 /**
  * SECTION:ags_audio_file_link
  * @short_description: link objects read of file.
@@ -412,170 +408,6 @@ ags_audio_file_link_finalize(GObject *gobject)
 
   if(audio_file_link->timestamp != NULL){
     g_object_unref(audio_file_link->timestamp);
-  }
-}
-
-void
-ags_audio_file_link_read_launch(AgsFileLaunch *file_launch,
-				AgsAudioFileLink *audio_file_link)
-{
-  AgsChannel *input;
-
-  AgsAudioFile *audio_file;
-
-  AgsFileIdRef *id_ref;
-
-  GObject *soundcard;
-
-  GList *audio_signal;
-
-  xmlNode *node, *child;
-
-  xmlChar *type;
-  xmlChar *filename;
-  xmlChar *encoding, *demuxer;
-
-  guint audio_channel;
-  
-  node = file_launch->node;
-
-  soundcard = NULL;
-  
-  audio_channel = audio_file_link->audio_channel;
-  filename = NULL;
-  
-  /* retrieve input */
-  input = NULL;
-  id_ref = (AgsFileIdRef *) ags_file_find_id_ref_by_node((AgsFile *) file_launch->file,
-							 node->parent->parent->parent);
-
-  if(id_ref != NULL){
-    input = (AgsChannel *) id_ref->ref;
-    soundcard = input->output_soundcard;
-  }
-  
-  /* read file link using URL or embedded */
-  type = xmlGetProp(node->parent,
-		    "type");
-
-  if(!xmlStrncmp(type,
-		 "url",
-		 4)){
-    //TODO:JK: add missing
-    
-    /* instantiat audio file */
-    filename = AGS_FILE_LINK(audio_file_link)->filename;
-    audio_file = ags_audio_file_new((gchar *) filename,
-				    soundcard,
-				    audio_channel);
-
-    /* open file and read audio signal */
-    ags_audio_file_open(audio_file);
-    ags_audio_file_read_audio_signal(audio_file);
-
-    /* retrieve audio signal */
-    if(audio_file->audio_signal == NULL){
-      return;
-    }
-
-    audio_signal = audio_file->audio_signal;
-    
-    /* set template flag */
-    AGS_AUDIO_SIGNAL(audio_signal->data)->flags |= AGS_AUDIO_SIGNAL_TEMPLATE;
-
-    /* unlink if needed */
-    if(input != NULL &&
-       input->link != NULL){
-      GError *error;
-
-      error = NULL;
-
-      ags_channel_set_link(input, NULL,
-			   &error);
-
-      if(error != NULL){
-	g_warning("%s", error->message);
-
-	g_error_free(error);
-      }
-    }
-
-    /* set file link */
-    g_object_set(G_OBJECT(input),
-		 "file-link", g_object_new(AGS_TYPE_FILE_LINK,
-					   "filename", filename,
-					   NULL),
-		 NULL);
-
-    if(input == NULL ||
-       audio_signal == NULL){
-      return;
-    }
-
-    /* add audio signal */
-    ags_recycling_add_audio_signal(input->first_recycling,
-				   AGS_AUDIO_SIGNAL(audio_signal->data));
-  }else if(!xmlStrncmp(type,
-		       "embedded",
-		       9)){
-    xmlXPathContext *xpath_context;
-    xmlXPathObject *xpath_object;
-
-    /*  */
-    xpath_context = xmlXPathNewContext(AGS_FILE(file_launch->file)->doc);
-    //    xmlXPathSetContextNode(node,
-    //			   xpath_context);
-    xpath_context->node = node;  
-
-    xpath_object = xmlXPathEval("./ags-embedded-audio",
-				xpath_context);
-
-    child = NULL;
-    
-    if(xpath_object->nodesetval != NULL && xpath_object->nodesetval->nodeTab != NULL){
-      guint i;
-
-      for(i = 0; i < xpath_object->nodesetval->nodeNr; i++){
-	if(xpath_object->nodesetval->nodeTab[i]->type == XML_ELEMENT_NODE){
-	  child = xpath_object->nodesetval->nodeTab[i];
-	  break;
-	}
-      }
-    }
-
-    if(child != NULL){    
-      /**/
-      encoding = xmlGetProp(child, "encoding");
-      demuxer = xmlGetProp(child, "demuxer");
-
-      if(!xmlStrncmp(encoding,
-		     "base64",
-		     7)){
-	if(!xmlStrncmp(demuxer,
-		       "raw",
-		       4)){
-	  gchar *data;
-
-	  audio_file = ags_audio_file_new(NULL,
-					  soundcard,
-					  audio_channel);
-	  data = child->content;
-
-	  ags_audio_file_open_from_data(audio_file, data);
-	  ags_audio_file_read_audio_signal(audio_file);
-
-	  audio_signal = audio_file->audio_signal;
-
-	  if(input == NULL ||
-	     audio_signal == NULL){
-	    return;
-	  }
-    
-	  ags_recycling_add_audio_signal(input->first_recycling,
-					 AGS_AUDIO_SIGNAL(audio_signal->data));
-	}
-      }
-    }
   }
 }
 
